--- a/web2.0/module/login/view/login_register.html
+++ b/web2.0/module/login/view/login_register.html
@@ -4,19 +4,18 @@
 
             <div class="form_login" >
                 <form method="post" name="LogForm" id="LogForm">
-                <table>
-                            <tr>
-                                <p>Login:</p>
-                            </tr>
+                    <p>Login:</p>
+                    <div id="error_login"></div>
+                   <table>
                             <tr>
                                 <td>Usuario:</td>
                                 <td><input name="user" id="user" type="text" placeholder="Usuario"/> </td>
                             </tr>
                             <tr>
                                 <td>Password:</td>
-                                <td><input name="password" id="password" type="text" placeholder="Contraseña"/> </td>
+                                <td><input name="password" id="password" type="password" placeholder="Contraseña"/> </td>
                             </tr>
-                            <td><input name="submit" type="button" value="Enviar" /></td>
+                            <td><input name="submit" type="submit" value="Enviar" /></td>
                     </table>
                 </form>
             </div>
