--- a/web2.0/view/assets/css/main.css
+++ b/web2.0/view/assets/css/main.css
@@ -4817,4 +4817,37 @@ img.shop_img {
 	border-radius: 14px;
 }
 
+.donate_cart {
+	width: 50%;
+	
+}
 
+.donate_cart i {
+	color: lightgreen;
+}
+
+
+
+
+#cart_ico i {
+	color: white;
+	vertical-align: middle;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+#cart_ico i:hover {
+	color: lightblue;
+	vertical-align: middle;
+	font-size: 25px;
+	cursor: pointer;
+}
+
+
+#cart_ico {
+	height: 25px;
+	width: 25px;
+	background-color: transparent;
+	display: inline-block;
+	text-align: center;
+}
