--- a/web2.0/module/cart/view/view.html
+++ b/web2.0/module/cart/view/view.html
@@ -1,12 +1,14 @@
         <table id="cart" border="1" style="visibility:hidden; width:100%">
                 <thead>
                     <tr>
-                        <th>Product</th>
-                        <th>Price</th>
-                        <th>Qty</th>
-                        <th>Total</th>
-                        <th></th>
+                        <th>Project Name</th>
+                        <th>Pledged - Goal</th>
+                        <th>Aportation</th>
+                        <th>Operation</th>
+                        
                     </tr>
                 </thead>
                 <tbody id="cartBody"></tbody>
+                <tfoot id="cartFoot">
+                </tfoot>
         </table>
