--- a/web2.0/view/assets/css/main.css
+++ b/web2.0/view/assets/css/main.css
@@ -4404,12 +4404,12 @@ input#ProPrice.ProPrice {
 
 .progressPro h1 {
 	display: inline-block;
-	width: 20%;
+	width: 30%;
 }
 
 .price-prog {
 	display: inline-block;
-	width: 80%;
+	width: 70%;
 }
 
 
@@ -4850,4 +4850,10 @@ img.shop_img {
 	background-color: transparent;
 	display: inline-block;
 	text-align: center;
+}
+
+.progress-bar.bg-info{
+	background-color: #33b5e5!important;
+	color: black !important;
+	font-family: sans-serif !important;
 }
