Cart 1.0 & SQL update

--- a/web2.0/module/cart/view/view.html
+++ b/web2.0/module/cart/view/view.html
@@ -1,7 +1,7 @@
         <table id="cart" border="1" style="visibility:hidden; width:100%">
                 <thead>
                     <tr>
-                        <th>Project Name</th>
+                        <th>Project Name1</th>
                         <th>Pledged - Goal</th>
                         <th>Aportation</th>
                         <th>Operation</th>
@@ -12,3 +12,5 @@
                 <tfoot id="cartFoot">
                 </tfoot>
         </table>
+        <button id="butttram" onclick="InsertCompra()">Tramitar pedido</button>
+        <span id="confpurch" class="alert alert-success"></span>
